2007-01-09  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-sel-eng.c: a bug in the class selector code, where it would not require whitespace before the class in a class attribute with multiple classes.
	
2007-01-09  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-fonts.h: gives syntax errors when included twice
	* src/cr-fonts.c: the return value of cr_font_family_prepend()
	should be "the font family list", not CR_OK which is the same as NULL.
	* src/cr-fonts.c: the logic of cr_font_weight_get_bolder
	does not take into account the FONT_WEIGHT_INHERIT value, and the
	shift by 1 can yield out-of-range values. Partial fix
	
2007-01-09  Benjamin Dauvergne <feanor@tol-eressea.org>

	* src/cr-tknzr.c: Bug 372011 - comments not parsed correctly
	* src/cr-tknzr.c: Bug 394680 - problem parsing function name starting with 'u' or 'r'
	* src/cr-parser.c: Bug 139878 - keep end of ruleset parsing location, and give it to the end_selector sac-handler.
	* src/cr-tknzr.c: Bug 394294 - Escape are wrongly computed
	
2007-01-09  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-tknzr.c: Bug 336621 - cr_tknzr_get_next_token wasn't 
	handling "<!--" correctly

2006-11-30  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-num.c: Bug 381040 - floating numbers always output to exactly 3 digits after decimal points.
	Also fixed a related bug where libcroco wouldn't emit compliant CSS strings if run in a non-C locale.
	
2006-11-29  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-token.c: Bug 380438 - Leak and trace message in cr_token_clear.
	Fix suggested by Mark Rogers <mark.rogers at electrum.co.uk>
	
2006-11-14  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-rgb.c: Bug 375194 - fix to builtin color processing
	
2006-05-02  Peter Moulder <pmoulder at mail.csse.monash.edu.au>
	
	* src/*.[ch]: Bug 340298 - Fixes to documentation markup.

2006-05-02  Dom Lachowicz <cinamod@hotmail.com>

	* src/Makefile.am: Fix linking by adding proper dependencies (bug 148790)