@@ -1,3 +1,7 @@
+2007-01-09  Benjamin Dauvergne <feanor@tol-eressea.org>
+
+	* src/cr-tknzr.c: Bug 314831 - Escapes not recognized
+	
 2007-01-09  Dom Lachowicz <domlachowicz@gmail.com>
 
 	* src/cr-sel-eng.c: a bug in the class selector code, where it would not require whitespace before the class in a class attribute with multiple classes.
